--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="options">
             <div class="option">
               <div class="checkbox">
-                <input type="checkbox" name="opt1" value="opt1"> Opzione 1
+                <input type="checkbox" name="opt1" value="opt1"> Modello 1
               </div>
               <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -39,7 +39,7 @@
             </div>
             <div class="option">
               <div class="checkbox">
-                <input type="checkbox" name="opt1" value="opt1"> Opzione 2
+                <input type="checkbox" name="opt1" value="opt1"> Modello 2
               </div>
               <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -48,7 +48,7 @@
             </div>
             <div class="option">
               <div class="checkbox">
-                <input type="checkbox" name="opt1" value="opt1"> Opzione 3
+                <input type="checkbox" name="opt1" value="opt1"> Modello 3
               </div>
               <div class="description">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
